sidebar z-index fixed

--- a/src/plonetheme/future_imperfect/theme/less/partials/navbar.less
+++ b/src/plonetheme/future_imperfect/theme/less/partials/navbar.less
@@ -17,3 +17,8 @@
     }
 
 }
+
+#menu{
+
+	z-index: 1040; 
+}
