--- a/src/plonetheme/future_imperfect/theme/styles/main.css
+++ b/src/plonetheme/future_imperfect/theme/styles/main.css
@@ -9379,6 +9379,9 @@ i.link-https:after {
 .plone-toolbar-left-expanded #header {
   padding-left: 120px !important;
 }
+#menu {
+  z-index: 1040;
+}
 /* ==========================================================================
    HEADER
    ========================================================================== */
